# perm

./: CMakeLists.txt
include/: ascend_order.h  descend_order.h  dict_order.h  perm_base.h  sjt_order.h  util.h
scripts/: build.sh  perf.sh  run_test.sh
src/: ascend_order.cpp  descend_order.cpp  dict_order.cpp  sjt_order.cpp
test/: CMakeLists.txt  benchmark.cpp  validation.cpp
